tests/errors/topk_dim_mismatch.lq
# A topk dimension mismatch must be a clean catchable error, not a crash.
topk([1, 0, 0], [[1, 0]], 1)
